Fix personalnotes sizing overflow thing

--- a/extension/data/styles/personalnotes.css
+++ b/extension/data/styles/personalnotes.css
@@ -36,10 +36,11 @@
     position: absolute;
     bottom: 0;
     width: 165px;
-    height: 65px;
+    height: 70px;
     padding: 5px;
     background: #C7D6E6;
     box-shadow: 0 -1px #FFF;
+    overflow: hidden;
 }
 /* Hack to get background on the list */
 .mod-toolbox-rd .tb-popup.personal-notes-popup .tb-popup-content {
